# docupipe

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.en.md  README.md  docpipe.example.yaml  docpipe.space-demo.yaml  docpipe.yaml  docupipe.example.yaml  pyproject.toml  skills-lock.json
.github/workflows/: release.yml
docpipe/: __init__.py  __main__.py  cli.py  display.py  image.py  models.py  pipeline.py
docpipe/converters/: __init__.py  base.py  markitdown.py  mineru.py
docpipe/destinations/: __init__.py  base.py  hindsight.py  localdrive.py
docpipe/sources/: __init__.py  base.py  dingtalk.py  local.py  localdrive.py
docpipe/steps/: __init__.py  base.py  convert.py  image_description.py  resolve_attachments.py  s3_upload.py
docs/: explanation-architecture.md  explanation-modes.md  howto-add-component.md  howto-configure.md  index.md  reference-api.md  reference-components.md  reference-configuration.md  reference-plugins.md  tutorial-quick-start.md
docs/superpowers/plans/: 2025-05-15-configurable-file-converters.md  2025-05-15-console-display-redesign.md  2025-05-15-content-type-strategy.md  2026-05-14-wiki-retain.md  2026-05-15-image-description.md  2026-05-16-bundle-model.md  2026-05-16-image-description-concurrency.md  2026-05-16-localdrive-destination.md  2026-05-16-localdrive-source.md  2026-05-16-mineru-converter.md  2026-05-16-resolve-attachments.md  2026-05-16-s3-upload-step.md  2026-05-16-yaml-config-redesign.md  2026-05-17-context-standardization.md  2026-05-17-context-template.md  2026-05-17-pipeline-modes.md  2026-05-17-python-variables.md  2026-05-17-tencent-docs-source.md  2026-05-18-unified-step-architecture.md  2026-05-20-dingtalk-doc-mode.md  2026-05-20-hindsight-configurable-params.md  2026-05-21-docupipe-skill.md  2026-05-21-excel-structured.md  2026-05-23-template-rendering.md
docs/superpowers/specs/: 2025-05-15-configurable-file-converters.md  2025-05-15-console-display-redesign.md  2025-05-15-content-type-strategy-design.md  2025-05-21-dingtalk-axls-export-design.md  2026-05-14-wiki-retain-design.md  2026-05-15-docpipe-pipeline-design.md  2026-05-15-image-description-design.md  2026-05-16-bundle-model-design.md  2026-05-16-image-description-concurrency-design.md  (+18 more)
docupipe/: __init__.py  __main__.py  cli.py  config.py  display.py  image.py  models.py  pipeline.py  plugins.py  render.py  runner.py  state.py  utils.py
docupipe/converters/: __init__.py  markitdown.py  mineru.py  resolver.py
docupipe/destinations/: __init__.py  base.py  hindsight.py  localdrive.py
docupipe/post_steps/: __init__.py  base.py
docupipe/sources/: __init__.py  base.py  dingtalk.py  localdrive.py  tencent.py
docupipe/steps/: __init__.py  base.py  convert.py  excel_structured.py  image_description.py  resolve_attachments.py  s3_upload.py  tencent_delete.py
dwsdocs_downloader/: __main__.py  cli.py  config.py  converter.py  display.py  downloader.py  retain.py  state.py  wiki_client.py
examples/: dingtalk-wiki-to-hindsight.yaml  quick-start.yaml  tencent-docs-to-obsidian.yaml
skills/docupipe/: docupipe.md
tests/: conftest.py  test_config.py  test_converter.py  test_converters.py  test_dingtalk.py  test_dingtalk_space.py  test_display.py  test_docpipe.py  test_downloader.py  test_e2e.py  test_excel_structured.py  test_hindsight.py  test_image.py  test_localdrive.py  test_models.py  test_pipeline_modes.py  test_plugins.py  test_registration.py  test_render.py  test_resolve_attachments.py  test_retain.py  test_s3_upload.py  test_state.py  test_state_manager.py  test_steps.py  test_tencent_delete.py  test_tencent_source.py  test_utils.py  test_wiki_client.py
(+3 files in other folders)
