[project]
name = "docpipe"
version = "0.1.0"
description = "通用文档传输 pipeline"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "markitdown>=0.1.0",
    "hindsight-client>=0.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "responses>=0.24.0",
]
mineru = [
    "mineru>=0.2.0",
]
all = [
    "docpipe[dev,mineru]",
]

[project.scripts]
docpipe = "docpipe.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["docpipe*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
