[project]
name = "docupipe"
version = "0.1.1"
description = "A universal document transfer pipeline tool that retrieves content from various document sources, processes it through configurable steps, and transfers it to multiple destination systems"
readme = "README.en.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ling Li", email = "your@email.com"}
]
keywords = ["document", "pipeline", "converter", "dingtalk", "hindsight"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.1.0",
    "markitdown[all]>=0.1.0",
    "hindsight-client>=0.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "responses>=0.24.0",
]
mineru = [
    "mineru>=3.1.14",
]
all = [
    "docupipe[dev,mineru]",
]

[project.scripts]
docupipe = "docupipe.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["docupipe*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
